--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "typescript": "^3.3.3"
   },
   "peerDependencies": {
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "react-native": "*"
   },
   "dependencies": {
     "@types/reserved-words": "^0.1.0",
