--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "typed-scss-modules",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "TypeScript type definition generator for SCSS CSS Modules",
   "main": "index.js",
-  "author": "Spencer Miskoviak <smiskoviak@gmail.com>",
+  "author": "Charlie Harding <charlie_harding@icloud.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/skovy/typed-scss-modules.git"
+    "url": "https://github.com/xsanda/typed-scss-modules.git"
   },
-  "homepage": "https://github.com/skovy/typed-scss-modules.git#readme",
+  "homepage": "https://github.com/xsanda/typed-scss-modules.git#readme",
   "keywords": [
     "scss",
     "css modules",
