--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-scss-modules",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "TypeScript type definition generator for SCSS CSS Modules",
   "main": "index.js",
   "author": "Charlie Harding <charlie_harding@icloud.com>",
@@ -34,6 +34,7 @@
     "tsm": "./dist/lib/cli.js"
   },
   "devDependencies": {
+    "@types/app-root-path": "^1.2.4",
     "@types/camelcase": "^4.1.0",
     "@types/css-modules-loader-core": "^1.1.0",
     "@types/glob": "^7.1.1",
@@ -41,6 +42,7 @@
     "@types/node-sass": "^3.10.32",
     "@types/param-case": "^1.1.2",
     "@types/yargs": "^12.0.8",
+    "app-root-path": "^2.2.1",
     "husky": "^1.3.1",
     "jest": "23.6.0",
     "lint-staged": "^8.1.3",
